<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/button_disabled_state"
        android:padding="@dimen/small_radius">
        
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/arrow_left"
            android:padding="@dimen/small_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtv_repository_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="flutter_app"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/siv_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/sv_repository_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/top_container"
        app:layout_constraintBottom_toTopOf="@id/btn_owner_repos">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_owner_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner_label"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_radius"
                android:layout_marginTop="@dimen/medium_margin"
                android:textStyle="bold"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/mcv_avatar_container"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_avatar_container"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:cardCornerRadius="@dimen/small_radius"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/mtv_description_label"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_radius">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/siv_owner_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:src="@drawable/github_logo"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_owner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Kotlin"
                android:layout_marginStart="@dimen/small_radius"
                app:layout_constraintStart_toEndOf="@id/mcv_avatar_container"
                app:layout_constraintTop_toTopOf="@id/mcv_avatar_container"
                app:layout_constraintBottom_toBottomOf="@id/mcv_avatar_container"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_description_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/mtv_description"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_radius"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/mtv_opened_issues"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_radius"
                tools:text="Description"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_opened_issues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/siv_info"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_radius"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/opened_issues"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/siv_info"
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/mtv_watchers"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_radius"
                android:src="@drawable/info_icon"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_opened_issues_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/siv_info"
                app:layout_constraintTop_toTopOf="@id/siv_info"
                app:layout_constraintBottom_toBottomOf="@id/siv_info"
                android:layout_marginStart="@dimen/small_radius"
                tools:text="7216"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_watchers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/siv_watchers"
                android:layout_marginStart="@dimen/medium_margin"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/watchers_label"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/siv_watchers"
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/mtv_stars"
                android:src="@drawable/eye_icon"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_radius"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_watchers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/siv_watchers"
                app:layout_constraintTop_toTopOf="@id/siv_watchers"
                app:layout_constraintBottom_toBottomOf="@id/siv_watchers"
                android:layout_marginStart="@dimen/small_radius"
                tools:text="1234"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/siv_star"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/stars_label"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_radius"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/siv_star"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/star_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/mtv_private"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_radius"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_stars_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="32333"
                app:layout_constraintStart_toEndOf="@id/siv_star"
                app:layout_constraintTop_toTopOf="@id/siv_star"
                app:layout_constraintBottom_toBottomOf="@id/siv_star"
                android:layout_marginStart="@dimen/small_radius"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/siv_lock"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_radius"
                android:text="@string/private_label"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/siv_lock"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/lock_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_is_locked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/siv_lock"
                app:layout_constraintTop_toTopOf="@id/siv_lock"
                app:layout_constraintBottom_toBottomOf="@id/siv_lock"
                android:layout_marginStart="@dimen/small_radius"
                tools:text="NO"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_owner_repos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_owner_repositories"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:textSize="18sp"
        android:backgroundTint="@color/button_enabled_state"
        app:layout_constraintBottom_toTopOf="@id/btn_owner_profile"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_owner_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/open_owner_profile"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:backgroundTint="@color/button_enabled_state"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>